--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "ng": "ng",
     "nx": "nx",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "nx run nx-angular-test:serve -c=ru",
+    "build": "nx run nx-angular-test:build --localize",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
@@ -25,51 +25,70 @@
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+    "// ssr": "",
+    "dev:ssr": "nx run nx-angular-test:serve-ssr",
+    "serve:ssr": "run-p serve:ssr-en serve:ssr-ru",
+    "serve:ssr-en": "cross-env PORT=5006 LANGUAGE=en node dist/nx-angular-test/server/en/main.js",
+    "serve:ssr-ru": "cross-env PORT=5007 LANGUAGE=ru node dist/nx-angular-test/server/ru/main.js ",
+    "build:ssr": "nx run nx-angular-test:build --localize && ng run nx-angular-test:server:production",
+    "prerender": "ng run nx-angular-test:prerender",
+    "// i18n": "",
+    "i18n": "ng xi18n"
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "9.2.2",
-    "@angular/animations": "^9.1.0",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.5.4",
-    "zone.js": "^0.10.2",
+    "@angular/animations": "^9.1.4",
+    "@angular/common": "^9.1.4",
+    "@angular/compiler": "^9.1.4",
+    "@angular/core": "^9.1.4",
+    "@angular/forms": "^9.1.4",
+    "@angular/localize": "^9.1.4",
+    "@angular/platform-browser": "^9.1.4",
+    "@angular/platform-browser-dynamic": "^9.1.4",
+    "@angular/platform-server": "^9.1.0",
+    "@angular/router": "^9.1.4",
     "@nestjs/common": "^6.8.3",
     "@nestjs/core": "^6.8.3",
     "@nestjs/platform-express": "^6.8.3",
-    "reflect-metadata": "^0.1.13"
+    "@nguniversal/express-engine": "^9.1.0",
+    "@nrwl/angular": "9.2.2",
+    "core-js": "^2.5.4",
+    "express": "^4.15.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.5",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.901.0",
     "@angular/cli": "9.1.0",
+    "@angular/compiler-cli": "^9.1.4",
+    "@angular/language-service": "^9.1.4",
+    "@nestjs/schematics": "^6.7.0",
+    "@nestjs/testing": "^6.8.3",
+    "@nguniversal/builders": "^9.1.0",
+    "@nrwl/cypress": "9.2.2",
+    "@nrwl/jest": "9.2.2",
+    "@nrwl/nest": "9.2.2",
+    "@nrwl/node": "9.2.2",
     "@nrwl/workspace": "9.2.2",
+    "@types/express": "^4.17.0",
+    "@types/jest": "25.1.4",
     "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
+    "codelyzer": "~5.0.1",
+    "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.2",
+    "cypress": "^4.5.0",
+    "eslint": "6.8.0",
+    "express-request-language": "^1.1.15",
+    "jest": "25.2.3",
+    "jest-preset-angular": "8.1.2",
+    "mock-browser": "^0.92.14",
+    "npm-run-all": "^4.1.5",
+    "prettier": "1.19.1",
+    "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.8.3",
-    "prettier": "1.19.1",
-    "@nrwl/nest": "9.2.2",
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular/language-service": "^9.1.0",
-    "@angular-devkit/build-angular": "0.901.0",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "8.1.2",
-    "@nrwl/jest": "9.2.2",
-    "jest": "25.2.3",
-    "@types/jest": "25.1.4",
-    "ts-jest": "25.2.1",
-    "cypress": "^4.1.0",
-    "@nrwl/cypress": "9.2.2",
-    "@nrwl/node": "9.2.2",
-    "@nestjs/schematics": "^6.7.0",
-    "@nestjs/testing": "^6.8.3"
+    "typescript": "~3.8.3"
   }
 }
